--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "brace": "^0.8.0",
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.2.0",
     "react-ace": "^3.5.0",
